# AppFence

./: .gitignore  ARCHITECTURE.md  Cargo.toml  LICENSE  PHASE_0_COMPLETE.md  README.md  SCOPE_AND_NON_GOALS.md  THREAT_MODEL.md
.cargo/: config.toml
.github/workflows/: ci.yml
crates/apf-agent/: Cargo.toml
crates/apf-agent/src/: main.rs
crates/apf-core/: Cargo.toml
crates/apf-core/src/: app_id.rs  error.rs  lib.rs  types.rs
crates/apf-daemon/: Cargo.toml
crates/apf-daemon/src/: audit.rs  database.rs  dbus_service.rs  main.rs  permissions.rs  policy_engine.rs  polkit_old_backup.rs
crates/apf-enforcement/: Cargo.toml
crates/apf-enforcement/src/: audit.rs  autostart.rs  background.rs  clipboard.rs  device.rs  filesystem.rs  lib.rs  network.rs  sandbox.rs
crates/apf-enforcement/tests/: enforcement_backends.rs  filesystem_backend.rs
crates/apf-launcher/: Cargo.toml
crates/apf-launcher/src/: main.rs
crates/apf-policy/: Cargo.toml
crates/apf-policy/src/: engine.rs  lib.rs  storage.rs
crates/apf-ui/: Cargo.toml
crates/apf-ui/src/: lib.rs
dbus/: org.apf.Daemon.conf  org.apf.Daemon.service
polkit/: org.apf.policy
scripts/: install-daemon.sh  setup-dev.sh
systemd/: apf-daemon.service
