[workspace]
resolver = "2"
members = [
    "crates/apf-daemon",
    "crates/apf-agent",
    "crates/apf-launcher",
    "crates/apf-core",
    "crates/apf-policy",
    "crates/apf-enforcement",
    "crates/apf-ui",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
authors = ["AppFence Contributors"]
repository = "https://github.com/yourusername/appfence"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
tokio-util = "0.7"

# DBus
zbus = { version = "4.0", features = ["tokio"] }
zbus_macros = "4.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Database
rusqlite = { version = "0.31", features = ["bundled"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# System
nix = { version = "0.27", features = ["process", "signal", "user"] }

# Security
sha2 = "0.10"
hex = "0.4"

# CLI
clap = { version = "4.4", features = ["derive"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
