[package]
name = "apf-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
sha2.workspace = true
hex.workspace = true
chrono.workspace = true

[lib]
name = "apf_core"
path = "src/lib.rs"
