[package]
name = "apf-daemon"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
apf-core = { path = "../apf-core" }
apf-policy = { path = "../apf-policy" }
apf-enforcement = { path = "../apf-enforcement" }

tokio.workspace = true
zbus.workspace = true
zbus_macros.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
rusqlite.workspace = true
nix.workspace = true
clap.workspace = true

[[bin]]
name = "apfd"
path = "src/main.rs"
