[package]
name = "apf-launcher"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
apf-core = { path = "../apf-core" }

tokio.workspace = true
zbus.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
nix.workspace = true
clap.workspace = true

[[bin]]
name = "apf-run"
path = "src/main.rs"
