[package]
name = "apf-policy"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
apf-core = { path = "../apf-core" }

serde.workspace = true
serde_json.workspace = true
toml.workspace = true
thiserror.workspace = true
anyhow.workspace = true
rusqlite.workspace = true

[lib]
name = "apf_policy"
path = "src/lib.rs"
