[package]
name = "apf-ui"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
apf-core = { path = "../apf-core" }

serde.workspace = true
serde_json.workspace = true
tauri = { version = "2.0", features = [] }

[lib]
name = "apf_ui"
path = "src/lib.rs"
crate-type = ["staticlib", "cdylib", "rlib"]
